# pybspf

./: .gitignore  LICENSE  README.md  bspf1d.py  pyproject.toml
docs/: api.md  compatibility_strategy.md  design.md  index.md  refactor_backlog.md
examples/bvp/: generate_mms.py  generate_spline_annulus_mms.py  genex_field_operator_schrodinger_note.md  multigrid.nc  schrodinger_data.nc  solve_mms_fd2_amg.py
examples/operation/: differentiate_1d.ipynb  differentiate_2d.ipynb  integrate_1d.ipynb
examples/pde/: burgers_1d.ipynb  diffusion_1d.ipynb  diffusion_2d.ipynb  diffusion_2d.py  poisson_2d_direct.ipynb  poisson_fd2_cg_bspf.py  poisson_ngsolve_baseline.py  poisson_test.py  schroedinger_1d.ipynb
examples/turbulence/: synthetic_turbulence.npz  turbulence_field.py
legacy/: __init__.py  bspf1d.py  bspf2d.py  bspf3d.py
src/pybspf/: __init__.py  backend.py  basis.py  boundary.py  compat.py  correction.py  grid.py  kkt.py  knots.py  time_integration.py  types.py
src/pybspf/operators/: __init__.py  bspf1d.py  bspf2d.py  piecewise.py
src/pybspf/ops/: __init__.py  differentiation.py  integration.py  interpolation.py
src/pybspf/solvers/: poisson1d.py  poisson2d.py  poisson2d_ngsolve.py
src/pybspf/solvers/schrodinger_fd4/: __init__.py  assembly.py  boundary.py  cli.py  common.py  io.py  linear.py
tests/: conftest.py  test_backend.py  test_basis.py  test_boundary.py  test_correction.py  test_grid.py  test_kkt.py  test_knots.py  test_operator.py  test_performance_regression.py  test_public_api.py  test_time_integration.py
